# Random-Walk

./: .coverage  README.md  pyproject.toml
src/random_walk/: __init__.py  button.py  main.py  parser.py  screen.py  walk_paterns.py  walker.py  world.py
src/random_walk/__pycache__/: button.cpython-313.pyc.1319001537328  main.cpython-313.pyc.1318973976240  parser.cpython-313.pyc.1318973980464  screen.cpython-313.pyc.1319001537968  walker.cpython-313.pyc.1318973976240  world.cpython-313.pyc.1318973976240
tests/: test_main.py  test_random_walk.py  test_ui.py  tests.py
tests/__pycache__/: test_random_walk.cpython-313-pytest-9.0.2.pyc.14952  test_ui.cpython-313-pytest-9.0.2.pyc.14952
