[project]
name = "random-walk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "GoulvenBonmarchand", email = "goulven.bonmarchand@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "argparse>=1.4.0",
    "pygame>=2.6.1",
]

[project.scripts]
random-walk = "random_walk.main:main"

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "ruff>=0.14.14",
]
